--- a/package.json
+++ b/package.json
@@ -1,16 +1,29 @@
 {
-  "name": "@example/basics",
-  "type": "module",
+  "name": "xsfunc-tezos",
   "version": "0.0.1",
-  "private": true,
+  "type": "module",
   "scripts": {
     "dev": "astro dev",
     "start": "astro dev",
     "build": "astro build",
     "preview": "astro preview",
-    "astro": "astro"
+    "astro": "astro",
+    "prepare": "husky install"
   },
   "dependencies": {
-    "astro": "^1.3.1"
+    "@astrojs/image": "^0.8.0",
+    "@astrojs/sitemap": "^1.0.0",
+    "@astrojs/tailwind": "^2.0.1",
+    "astro": "^1.3.1",
+    "tailwindcss": "^3.0.24"
+  },
+  "devDependencies": {
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "eslint": "^8.24.0",
+    "eslint-kit": "^6.7.0",
+    "eslint-plugin-astro": "^0.19.0",
+    "husky": "^8.0.1",
+    "prettier-plugin-astro": "^0.5.5"
   }
 }
