--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^2.0.1",
     "astro": "^1.3.1",
+    "daisyui": "^2.31.0",
+    "sharp": "^0.31.1",
     "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
