--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@astrojs/image": "^0.8.0",
     "@astrojs/sitemap": "^1.0.0",
     "@astrojs/tailwind": "^2.0.1",
+    "@tailwindcss/typography": "^0.5.7",
     "astro": "^1.3.1",
     "daisyui": "^2.31.0",
     "sharp": "^0.31.1",
